--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="index.css">
 
   <!-- Document Title -->
-  <title>Happy Gf Day Lablabb</title>
+  <title>Happy Gf Day Lablab</title>
 </head>
 
 <body>
